# youtrack-sdk

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: lint-and-test.yml
.run/: Run Tests.run.xml
examples/: list_project_custom_fields.py
scripts/: check.py
tests/: test_async_client.py  test_client.py  test_converters.py  test_definitions.py  test_helpers.py  test_types.py
tests/responses/: project_custom_fields.json
youtrack_sdk/: __init__.py  async_client.py  base_client.py  client.py  entities.py  exceptions.py  helpers.py  py.typed  types.py
