[project]
name = "youtrack-sdk"
description = "YouTrack SDK"
version = "0.1.1"
authors = [
    { name = "moneymeets", email = "service@moneymeets.com" },
    { name = "Michael Gerhold", email = "michael.gerhold@ninjaneers.de" },
]
readme = "README.md"
keywords = ["youtrack", "sdk"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.urls]
repository = "https://github.com/ninjaneers-team/youtrack-sdk"  # This fork.
homepage = "https://github.com/moneymeets/youtrack-sdk"  # Original.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.14.14",
]
