[project]
name = "youtrack-sdk"
description = "YouTrack SDK"
version = "0.1.1"
authors = [
    { name = "moneymeets", email = "service@moneymeets.com" },
    { name = "Michael Gerhold", email = "michael.gerhold@ninjaneers.de" },
]
readme = "README.md"
keywords = ["youtrack", "sdk"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyright[nodejs]>=1.1.408",
]

[project.urls]
repository = "https://github.com/ninjaneers-team/youtrack-sdk"  # This fork.
homepage = "https://github.com/moneymeets/youtrack-sdk"  # Original.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "poethepoet>=0.40.0",
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
]

[tool.poe.tasks]
check = { cmd = "scripts/check.py" }
fix = { cmd = "scripts/check.py --fix" }
test = { cmd = "scripts/check.py --test" }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.json_schema.PydanticJsonSchemaWarning",
]
